# gru_validation

./: CMakeLists.txt  README.md  configure.sh
include/: utils.hpp
src/: test_gru_backward.cpp  test_gru_forward.cpp  utils.cpp
tests/: gru.py  gru_backward_validation.sh  gru_forward_validation.sh
tmp/: gru_forward.json  tmp
